# newline

./: README.md  USER_GUIDE.md  license.txt  pyproject.toml
newline/: hooks.py
newline/fixtures/: brand.json  custom_field.json  item_group.json
newline/newline/: api.py  hooks_quotation.py  item.py  setup.py  utils.py
newline/newline/doctype/nl_brand_summary/: nl_brand_summary.json  nl_brand_summary.py
newline/newline/doctype/nl_exchange_rate/: nl_exchange_rate.json  nl_exchange_rate.py
newline/newline/doctype/nl_item_component/: nl_item_component.json  nl_item_component.py
newline/newline/doctype/nl_quotation_line/: nl_quotation_line.json  nl_quotation_line.py
newline/newline/print_format/: nl_commercial_proposal.html  nl_commercial_proposal_modern.html  nl_costing_sheet.html
newline/public/js/: item.js  quotation.js
